--- a/aima-vlc-7/translations/text_10.csv
+++ b/aima-vlc-7/translations/text_10.csv
@@ -62,3 +62,5 @@ CARTA_D,Una peça de paper enrotllat sobre si mateix i atat amb un cordell. Pare
 GAFAS_D,"Unes ulleres prou maques i amb aspecte retro. Parèixen de fa cinquanta anys. Quina època, oi que sí?","Unas gafas bien monas y con aspecto retro. Parecen de hace cincuenta años. Qué epoca, ¿verdad?"
 TELEGRAFO_D,"Un aparat mecànic inventat al segle XIX per a comunicar-se ràpidament. Es manen senyals elèctriques amb una petita palanca, codificades en el famós Codi Morse.\n.--. ..- .--. ..- - ","Un aparato mecánico inventado en el siglo XIX para comunicarse rápidamente. Se mandan señales eléctricas con una pequeña palanca, codificadas en el famoso Código Morse.\n.- -... ..- -... .. .-.. .-.. .-"
 MOSQUITO_D,"Una criatura diminuta en un glop d'aigua. Aquest animalet està a la segona fase de la metamorfòsi del mosquit, i viu en aigües estancades.","Una criatura diminuta en un charquito de agua. Este animalillo está en la segunda fase de la metamorfosis del mosquito, y vive en aguas estancadas."
+SALIR,Eixir,Salir
+JUGAR,Jugar,Jugar
