No sé escribir + export

--- a/aima-vlc-7/translations/text_11.csv
+++ b/aima-vlc-7/translations/text_11.csv
@@ -41,7 +41,7 @@ LAVANDERA_2,El seu nom en altres països es per aquest curiòs tret.,Su nombre e
 LAVANDERA_3,Sempre és prop d'aigua i s'alimenta d'insectes que l'habiten.,Siempre está cerca del agua y se alimenta de insectos que la habitan.
 SIGUIENTE,Següent,Siguiente
 SELECCIONAR,Seleccionar,Selecionar
-NOMBRE_JUEGO,PLOMES Y PIULADES,PLUMAS Y PIADAS
+NOMBRE_JUEGO,PLOMES I PIULADES,PLUMAS Y PIADAS
 ESPEJO,Espill llis,Espejo liso
 PESCADO,Peix fresc,Pescado fresco
 PAJARITA,Corbata refinada,Pajarita refinada
